# file-sevice

./: Cargo.toml  README.md
core/common/src/: lib.rs
src/: main.rs
src/api/: control_api.rs  file_api.rs  mod.rs
src/entity/: control_entity.rs  file_entity.rs  mod.rs
src/entity/query/: file_query.rs  mod.rs
src/http/: http_server.rs
src/routers/: control_api.rs
src/service/: control_server.rs  file_service.rs  mod.rs
